[package]
name = "diploma-algos"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rkyv = { version = "0.8.15", features = ["bytecheck"] } 
rustc-hash = "2.1.1"
ordered-float = "5.1.0"
rayon = "1.11.0"
itertools = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# ── Benchmark target ────────────────────────────────────────────────────────
[[bench]]
name = "ml_bench"
harness = false

# ── Optimisation: make release builds faster for training ───────────────────
[profile.bench]
opt-level = 3
lto = "thin"
